--- a/_config.yml
+++ b/_config.yml
@@ -186,10 +186,6 @@ exclude:
   - package*.json
 
 jekyll-archives:
-  enabled: [categories, tags]
+  enabled:
   layouts:
-    category: category
-    tag: tag
   permalinks:
-    tag: /tags/:name/
-    category: /categories/:name/
